--- a/conf/log.conf
+++ b/conf/log.conf
@@ -1,59 +1,37 @@
 ##############################################################
 [loggers]
-keys=root,simple, access
+keys=root
 
 [logger_root]
-level=DEBUG
-handlers=console_handler
+level=%(log_level)s
+handlers=console_handler, log_handler
 qualname=root
-
-[logger_simple]
-level=DEBUG
-handlers=console_handler, simple_handler
-qualname=simple
-propagate=0
-
-[logger_access]
-level=DEBUG
-handlers=console_handler, http_handler
-qualname=access
-propagate=0
 
 ##############################################################
 [handlers]
-keys=console_handler,simple_handler,http_handler
+keys=console_handler,log_handler
 
 [handler_console_handler]
 class=StreamHandler
 level=DEBUG
-formatter=console_formatter
+formatter=log_formatter
 args=(sys.stdout,)
 
-[handler_simple_handler]
+[handler_log_handler]
 class=handlers.TimedRotatingFileHandler
-level=DEBUG
-formatter=simple_formatter
-args=('./log/simple%(log_port)s.log', 'midnight', 1, 60)
-
-[handler_http_handler]
-class=handlers.TimedRotatingFileHandler
-level=DEBUG
-formatter=http_formatter
-args=('./log/http%(log_port)s.log', 'midnight', 1, 60)
+level=%(log_level)s
+formatter=log_formatter
+args=("%(log_path)s/log_%(log_port)s.log", "midnight", 1, 60)
 
 ###############################################################
 [formatters]
-keys=console_formatter,simple_formatter,http_formatter
+keys=log_formatter
 
-[formatter_console_formatter]
+[formatter_log_formatter]
 format=[%(asctime)s][%(threadName)s][%(filename)s:%(lineno)s] %(levelname)s: %(message)s
 datefmt=%y-%m-%d %H:%M:%S
 
-[formatter_simple_formatter]
-format=[%(asctime)s][%(threadName)s][%(filename)s:%(lineno)s] %(levelname)s: %(message)s
-datefmt=%y-%m-%d %H:%M:%S
 
-[formatter_http_formatter]
-format=[%(asctime)s] %(message)s
-datefmt=%y-%m-%d %H:%M:%S
+
+
 
